RESOLVED FIXED180362
Get a directory path to SWServers for storing ServiceWorker registrations
https://bugs.webkit.org/show_bug.cgi?id=180362
Summary Get a directory path to SWServers for storing ServiceWorker registrations
Brady Eidson
Reported 2017-12-04 09:43:01 PST
Get a directory path to SWServers for storing ServiceWorker registrations
Attachments
Patch (23.13 KB, patch)
2017-12-04 10:07 PST, Brady Eidson
no flags
PFL (23.12 KB, patch)
2017-12-04 12:01 PST, Brady Eidson
no flags
Patch (26.05 KB, patch)
2017-12-04 12:08 PST, Brady Eidson
no flags
Patch (1.61 KB, patch)
2017-12-04 16:51 PST, Brady Eidson
no flags
Patch (1.59 KB, patch)
2017-12-04 16:52 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2017-12-04 10:07:31 PST
Chris Dumez
Comment 2 2017-12-04 10:11:37 PST
Comment on attachment 328356 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=328356&action=review r=me > Source/WebKit/ChangeLog:10 > + Extra blank line.
Brady Eidson
Comment 3 2017-12-04 12:01:06 PST
Brady Eidson
Comment 4 2017-12-04 12:08:56 PST
Brady Eidson
Comment 5 2017-12-04 12:09:13 PST
Comment on attachment 328372 [details] Patch Waiting for Linux builds on EWS
EWS Watchlist
Comment 6 2017-12-04 12:10:18 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
WebKit Commit Bot
Comment 7 2017-12-04 13:50:34 PST
Comment on attachment 328372 [details] Patch Clearing flags on attachment: 328372 Committed r225490: <https://trac.webkit.org/changeset/225490>
WebKit Commit Bot
Comment 8 2017-12-04 13:50:36 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2017-12-04 13:51:48 PST
youenn fablet
Comment 10 2017-12-04 16:42:36 PST
Comment on attachment 328372 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=328372&action=review > Source/WebKit/StorageProcess/StorageProcess.cpp:390 > + ASSERT(!path.isEmpty()); This assertion is hit in case of private browsing mode, at least the private browsing mode used by rwt which changes Document sessionID to emptySessionID. See https://build.webkit.org/results/Apple%20iOS%2011%20Simulator%20Debug%20WK2%20(Tests)/r225492%20(1416)/results.html
Brady Eidson
Comment 11 2017-12-04 16:44:13 PST
(In reply to youenn fablet from comment #10) > Comment on attachment 328372 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=328372&action=review > > > Source/WebKit/StorageProcess/StorageProcess.cpp:390 > > + ASSERT(!path.isEmpty()); > > This assertion is hit in case of private browsing mode, at least the private > browsing mode used by rwt which changes Document sessionID to emptySessionID. > See > https://build.webkit.org/results/ > Apple%20iOS%2011%20Simulator%20Debug%20WK2%20(Tests)/r225492%20(1416)/ > results.html Yup, that's totally 100% expected. I wasn't aware any tests ran in private browsing yet.
Brady Eidson
Comment 12 2017-12-04 16:51:24 PST
Reopening to attach new patch.
Brady Eidson
Comment 13 2017-12-04 16:51:25 PST
Brady Eidson
Comment 14 2017-12-04 16:52:07 PST
WebKit Commit Bot
Comment 15 2017-12-04 17:19:29 PST
Comment on attachment 328413 [details] Patch Clearing flags on attachment: 328413 Committed r225510: <https://trac.webkit.org/changeset/225510>
WebKit Commit Bot
Comment 16 2017-12-04 17:19:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.