Followup to: Get a directory path to SWServers for storing ServiceWorker registrations https://bugs.webkit.org/show_bug.cgi?id=180362

Unreviewed.


* StorageProcess/StorageProcess.cpp:
(WebKit::StorageProcess::swServerForSession): Change this ASSERT which is invalid in private browsing sessions.


Canonical link: https://commits.webkit.org/196351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225510 268f45cc-cd09-0410-ab3c-d52691b4dbfc